sample test commit4

--- a/sample/test.html
+++ b/sample/test.html
@@ -34,6 +34,7 @@ body { font-family:"돋움"; font-size:0.8em; }
 
 </head>
 <body>
+	test1
 	<div>
 		<br/><input experjs="inputType:eng" type="text" /> <span>eng</span>
 		<br/><input experjs="inputType:engLow" type="text" /> <span>engLow</span>
