--- a/sample/ui/EXLayerDOM.html
+++ b/sample/ui/EXLayerDOM.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
 <title></title>
-<link type="text/css" rel="stylesheet" href="../../experCSS/exper.css" />
-<script type="text/javascript" src="../../experJS/experJS.js"></script>
+<link type="text/css" rel="stylesheet" href="../../experCSS/exper.css?v=a1" />
+<script type="text/javascript" src="../../experJS/experJS.js?v=a1"></script>
 <script type="text/javascript">
 (function(){
 	EX.includeBegin("../../experJS");
@@ -22,7 +21,7 @@
 		EXLayerDOM.init();
 
 		btn1.onclick = function(){
-			EXLayerDOM.open("AJAX" , "../../data/html/div2.html" , { width: 600 , height:200 });
+			EXLayerDOM.open("AJAX" , "../../data/html/div2.html" , { width: 600 , height:400 });
 		};
 		btn2.onclick = function(){
 			EXLayerDOM.open("IFRAME" , "../../index.html" , { width: 400 , height: 600 });
