--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ body { background-color:#ffffff; }
 		<li><a href="./sample/ui/EXScrollView.html">ui / EXScrollView</a></li>
 		<li><a href="./sample/ui/EXValidator.html">ui / EXValidator</a></li>
 		<li><a href="./sample/ui/EXLayerDOM.html">ui / EXLayerDOM</a></li>
+		<li><a href="./sample/ui/EXCheckBox.html">ui / EXCheckBox</a></li>
+		<li><a href="./sample/ui/EXRadioButton.html">ui / EXRadioButton</a></li>
 	</ul>
 	<ul>
 		<li><a href="./sample/ex/includeBegin.html">ex / includeBegin</a></li>
