--- a/sample/ui/EXCheckBox.html
+++ b/sample/ui/EXCheckBox.html
@@ -47,15 +47,15 @@
 </head>
 <body>
 	<div>
-		<input id="check1" class="experCSS_designUI_checkBox" disabled="disabled" type="checkbox" />
+		<input id="check1" class="exUIKit_checkBox" disabled="disabled" type="checkbox" />
 		<label for="check1">checkBox1</label>
 	</div>
 	<div>
-		<input id="check2" class="experCSS_designUI_checkBox" type="checkbox" />
+		<input id="check2" class="exUIKit_checkBox" type="checkbox" />
 		<label for="check2">checkBox2</label>
 	</div>
 	<div>
-		<input id="check3" class="experCSS_designUI_checkBox" type="checkbox" />
+		<input id="check3" class="exUIKit_checkBox" type="checkbox" />
 		<label for="check3">checkBox3</label>
 	</div>
 </body>
