--- a/sample/ui/EXRadioButton.html
+++ b/sample/ui/EXRadioButton.html
@@ -21,24 +21,24 @@
 </head>
 <body>
 	<div>
-		<input id="radio11" class="experCSS_designUI_radioGroup" type="radio" name="radio111" />
+		<input id="radio11" class="exUIKit_radioGroup" type="radio" name="radio111" />
 		<label for="radio11">radio1</label>
 
-		<input id="radio12" class="experCSS_designUI_radioGroup" type="radio" name="radio111" />
+		<input id="radio12" class="exUIKit_radioGroup" type="radio" name="radio111" />
 		<label for="radio12">radio1</label>
 
-		<input id="radio13" class="experCSS_designUI_radioGroup" type="radio" name="radio111" />
+		<input id="radio13" class="exUIKit_radioGroup" type="radio" name="radio111" />
 		<label for="radio13">radio1</label>
 	</div>
 
 	<br/><br/><br/>
 
 	<div>
-		<input id="radio21" class="experCSS_designUI_radioGroup" type="radio" name="radio222" />
+		<input id="radio21" class="exUIKit_radioGroup" type="radio" name="radio222" />
 		<label for="radio21">radio2</label>
 	</div>
 	<div>
-		<input id="radio22" class="experCSS_designUI_radioGroup" type="radio" name="radio222" />
+		<input id="radio22" class="exUIKit_radioGroup" type="radio" name="radio222" />
 		<label for="radio22">radio2</label>
 	</div>
 </body>
