--- a/sample/ui/EXRadioButton.html
+++ b/sample/ui/EXRadioButton.html
@@ -27,7 +27,7 @@
 		<input id="radio12" class="exUIKit_radioGroup" type="radio" name="radio111" />
 		<label for="radio12">radio1</label>
 
-		<input id="radio13" class="exUIKit_radioGroup" type="radio" name="radio111" />
+		<input id="radio13" class="exUIKit_radioGroup" type="radio" name="radio111" disabled="disabled" />
 		<label for="radio13">radio1</label>
 	</div>
 
