--- a/sample/ui/EXRadioButton.html
+++ b/sample/ui/EXRadioButton.html
@@ -18,6 +18,11 @@
 })();
 </script>
 
+<!--Test - original visible //-->
+<style type="text/css">
+.exUIKit_radioGroup.original { position:static; left:auto; visibility:visible; }
+</style>
+
 </head>
 <body>
 	<div>
