ScrollView bug fix

--- a/sample/ui/EXCheckBox.html
+++ b/sample/ui/EXCheckBox.html
@@ -21,7 +21,8 @@
 
 <!--Test - original visible //-->
 <style type="text/css">
-.exUIKit_checkBox.original { position:static; left:auto; visibility:visible; }
+.exampleBox { padding:20px; border:1px dotted #999999; }
+select.exUIKit_selectBox { visibility:visible !important; position:static  !important; left:0  !important; } /* for example */
 </style>
 
 </head>
